# sandymaguire.me

./: .gitignore  Makefile  cv.markdown  newhome.html  posts  stack.yaml  we-can-solve-this.cabal
clippings/: bukowski.txt  focusing-atomic-bomb.txt
docs/: CNAME  atom.xml  cv.html  feed.rss  index.html  resume.html
docs/about/: index.html
docs/book-reviews/: index.html
docs/books/: -birth-of-a-theorem-a-mathematical-adventure-cédric-villani.html  -blindness-harvest-book-saramago-josé.html  -daily-rituals-how-artists-work.html  -edsger-dijkstra-a-discipline-of-programming-prenticehall-series-in-automatic-computation-1976.html  -embassytown.html  -philosophy.html  (+371 more)
scripts/: cron.sh  deploy.sh  newpost.sh  publish.sh
site/: about.markdown  now.markdown  top-posts.markdown
src/: BookReviews.hs  ClipIt.hs  Erdos.hs  Meta.hs  SitePipeUtils.hs  Utils.hs  WCST.hs
wip/: 2017-10-10-how-to-fall-in-love-with-rap.markdown  2018.markdown  2020.markdown  2025.markdown  abusive-web.markdown  adventure.markdown  businessman.markdown  canada-day.markdown  capitalism.markdown  detroit.markdown  doing-hard-things.markdown  economics.markdown  education2.markdown  engineering-ideas.markdown  expertese.markdown  games.markdown  goals.markdown  good-bad-args.markdown  hamming.markdown  nazis.markdown  nobody-cares.markdown  not-so-hard.markdown  open-letter-uber.markdown  pai.markdown  phone-it-in.markdown  retirement.markdown  skaidre.markdown  tax-horror.markdown  terrorism.markdown  thimbleweed.markdown  thinking.markdown  travel-narratives.markdown  writing-a-book.markdown
(+1362 files in other folders)
