name:               we-can-solve-this
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

homepage:           http://sandymaguire.me
license:            BSD3
license-file:       LICENSE
author:             Sandy Maguire
maintainer:         sandy@sandymaguire.me

category:           Web

executable wcst
  main-is:          WCST.hs
  other-modules:
      BookReviews
      ClipIt
      Utils
  build-depends:    base
                  , datetime
                  , parsec
                  , strptime
                  , time
                  , containers
                  , old-locale
                  , regex-compat
                  , time
                  , sitepipe
                  , mustache
                  , text
                  , lens
                  , regex-tdfa
                  , aeson
                  , Glob
                  , mtl
                  , unordered-containers
                  , pandoc
  ghc-options:      -threaded -Wall -Werror
  hs-source-dirs:   src
  default-language: Haskell2010

